--- a/src/test/Refrain.Portal.Module.Test/Refrain.Portal.Module.Test.csproj
+++ b/src/test/Refrain.Portal.Module.Test/Refrain.Portal.Module.Test.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="View\SearchViewDataTest.cs" />
     <Compile Include="View\SearchViewTest.cs" />
+    <Compile Include="View\SongViewDataTest.cs" />
     <Compile Include="View\SongViewTest.cs" />
     <Compile Include="View\TestBase.cs" />
   </ItemGroup>
