--- a/src/app/Refrain.Portal.Module/Refrain.Portal.Module.csproj
+++ b/src/app/Refrain.Portal.Module/Refrain.Portal.Module.csproj
@@ -52,7 +52,9 @@
   <ItemGroup>
     <Compile Include="CoSoundConfiguration.cs" />
     <Compile Include="CosoundModule.cs" />
+    <Compile Include="Data\IRefrainRepository.cs" />
     <Compile Include="Extension\Album.cs" />
+    <Compile Include="Extension\Search.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="View\AlbumVIew.cs" />
     <Compile Include="View\SearchView.cs" />
