--- a/src/test/Refrain.Portal.Module.Test/Refrain.Portal.Module.Test.csproj
+++ b/src/test/Refrain.Portal.Module.Test/Refrain.Portal.Module.Test.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CosoundModuleTest.cs" />
+    <Compile Include="Extension\SearchTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="View\SearchViewDataTest.cs" />
     <Compile Include="View\SearchViewTest.cs" />
