--- a/src/app/Refrain.Portal.Module/Refrain.Portal.Module.csproj
+++ b/src/app/Refrain.Portal.Module/Refrain.Portal.Module.csproj
@@ -53,11 +53,17 @@
     <Compile Include="CoSoundConfiguration.cs" />
     <Compile Include="CosoundModule.cs" />
     <Compile Include="Data\IRefrainRepository.cs" />
+    <Compile Include="Data\Model\Song.cs" />
+    <Compile Include="Data\SongMapper.cs" />
+    <Compile Include="Exceptions\NotATrackException.cs" />
     <Compile Include="Extension\Search.cs" />
     <Compile Include="Extension\Song.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="View\SearchView.cs" />
     <Compile Include="View\SongView.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Domain\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
