--- a/src/app/Refrain.Portal.Module/Refrain.Portal.Module.csproj
+++ b/src/app/Refrain.Portal.Module/Refrain.Portal.Module.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="View\SearchView.cs" />
     <Compile Include="View\SongView.cs" />
+    <Compile Include="View\TwitterMoodView.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Domain\" />
