Added Twitter mood extension, that can be queried for all countries as well as specific ones(given a comma seperated list

--- a/src/test/Refrain.Portal.Module.Test/Refrain.Portal.Module.Test.csproj
+++ b/src/test/Refrain.Portal.Module.Test/Refrain.Portal.Module.Test.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CosoundModuleTest.cs" />
+    <Compile Include="Extension\TwitterMoodTest.cs" />
     <Compile Include="Extension\SongTest.cs" />
     <Compile Include="Extension\SearchTest.cs" />
     <Compile Include="Extension\TestBase.cs" />
