--- a/src/app/Refrain.Portal.Module/Refrain.Portal.Module.csproj
+++ b/src/app/Refrain.Portal.Module/Refrain.Portal.Module.csproj
@@ -56,8 +56,10 @@
     <Compile Include="Data\Model\Song.cs" />
     <Compile Include="Data\SongMapper.cs" />
     <Compile Include="Exceptions\NotATrackException.cs" />
+    <Compile Include="Extension\Dto\TwitterMood.cs" />
     <Compile Include="Extension\Search.cs" />
     <Compile Include="Extension\Song.cs" />
+    <Compile Include="Extension\TwitterMood.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="View\SearchView.cs" />
     <Compile Include="View\SongView.cs" />
