--- a/src/app/Refrain.Portal.Module/Refrain.Portal.Module.csproj
+++ b/src/app/Refrain.Portal.Module/Refrain.Portal.Module.csproj
@@ -54,20 +54,22 @@
     <Compile Include="CosoundModule.cs" />
     <Compile Include="Data\IRefrainRepository.cs" />
     <Compile Include="Data\Model\Song.cs" />
-    <Compile Include="Data\SongMapper.cs" />
-    <Compile Include="Exceptions\NotATrackException.cs" />
-    <Compile Include="Extension\Dto\TwitterMood.cs" />
+    <Compile Include="Domain\Dto\Tweet.cs" />
+    <Compile Include="Domain\Dto\TwitterMood.cs" />
+    <Compile Include="Domain\SongMapper.cs" />
+    <Compile Include="Domain\TwitterMoodMapper.cs" />
+    <Compile Include="Exceptions\CannotMapException.cs" />
+    <Compile Include="Extension\Tweet.cs" />
     <Compile Include="Extension\Search.cs" />
     <Compile Include="Extension\Song.cs" />
     <Compile Include="Extension\TwitterMood.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="View\SearchView.cs" />
     <Compile Include="View\SongView.cs" />
+    <Compile Include="View\TweetView.cs" />
     <Compile Include="View\TwitterMoodView.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Domain\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
