--- a/src/test/Refrain.Portal.Module.Test/Refrain.Portal.Module.Test.csproj
+++ b/src/test/Refrain.Portal.Module.Test/Refrain.Portal.Module.Test.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Extension\SearchTest.cs" />
     <Compile Include="Extension\TestBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="View\TweetViewTest.cs" />
     <Compile Include="View\SearchViewDataTest.cs" />
     <Compile Include="View\SearchViewTest.cs" />
     <Compile Include="View\SongViewDataTest.cs" />
@@ -71,6 +72,7 @@
   <ItemGroup>
     <Content Include="View\ActorContent_18c323ca-d7c4-4493-8ad6-3e64d881c8e9.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <SubType>Designer</SubType>
     </Content>
     <Content Include="View\AudioMusicTrack_bb8dd249c192405b8a86b3fb5ca49819_Amours_mortes_%28tant_de_peine%29.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
